Correct the provider path

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "misterspelik\\LaravelPdf\\PdfServiceProvider"
+                "misterspelik\\LaravelPdf\\Provider\\PdfServiceProvider"
             ],
             "aliases": {
                 "PDF": "misterspelik\\LaravelPdf\\Facades\\Pdf"
